--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^6.1.2",
     "@nestjs/typeorm": "^9.0.1",
+    "aws-sdk": "^2.1231.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "joi": "^17.6.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^2.10.0",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -43,6 +46,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "27.4.1",
     "@types/joi": "^17.2.3",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
