--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "test:cov": "NODE_ENV=test jest --coverage",
     "test:debug": "NODE_ENV=test node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "NODE_ENV=test jest --config ./test/jest-e2e.json",
-    "deploy": "npm i --force && npm run build && npx pm2 start dist/main.js",
-    "redeploy": "npm i --force && npm run build && npx pm2 reload all"
+    "deploy": "npm i --force && npm run build && NODE_ENV=deployment npx pm2 start dist/main.js",
+    "redeploy": "npm i --force && npm run build && NODE_ENV=deployment npx pm2 reload all"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
