--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "sanitize-html": "^2.7.2",
     "typeorm": "^0.3.9"
   },
   "devDependencies": {
@@ -51,6 +52,7 @@
     "@types/joi": "^17.2.3",
     "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
+    "@types/sanitize-html": "^2.6.2",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
